--- a/index.css
+++ b/index.css
@@ -19,6 +19,20 @@ body {
   line-height: 1.5;
 }
 
+a {
+  color: #0366d6;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #0366d6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 /* TYPOGRAPHY */
 
 h1 {
